<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fruity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sales_demographic">Customer</string>
    <string name="title_activity_sales_payment">Payment</string>
    <string name="title_activity_enter_staff">Enter Staff</string>
    <string name="title_activity_setup_select_school">Select School</string>
    <string name="title_activity_setup_input_school">Enter School</string>
    <string name="title_activity_setup_stand_info">Stand Information</string>
    <string name="title_activity_inventory_preprocess">Starting Inventory</string>
    <string name="title_activity_inventory_postprocess">All Inventory Before Sales</string>
    <string name="title_activity_ready_to_sell">Ready To Sell?</string>
    <string name="title_activity_ready_to_calculate">Ready To Calculate?</string>
    <string name="title_activity_final_summary">End of Stand Summary</string>
        
    <string name="schoolName">School Name: </string>
	<string name="todaysDate">Today\'s Date:  </string>
    <string name="temperature">Temperature: </string>
    
    <string name ="weather">Weather: </string>
    <string-array name="weather_options">
        <item>Sunny</item>
        <item>Partly Sunny</item>
        <item>Cloudy</item>
        <item>Rainy</item>
        <item>Snowy</item>
    </string-array>
    
    <string name="cashBox">Cash Box: $ </string>
 	<string name ="fruitStandCost">Fruit Stand Cost: $ </string>
	<string name ="smoothieCost">Smoothie Cost: $ </string>
	<string name ="additionalCosts">Additional Costs: $ </string>
	
    <color name="white">#FFFFFF</color>
    <drawable name="editViewBox">#FFFF00</drawable>

    <string name="inventoryPreprocess">Preprocessed Inventory</string>
    <string name="inventoryPostprocess">Postprocess Inventory</string>
    <string name="salesDemographics">Customer Information</string>

    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="orange">Orange</string>
    <string name="pear">Pear</string>
    <string name="grapes">Grapes</string>
    <string name="kiwi">Kiwi</string>
    <string name="mixedBag">Mixed Bag</string>
    <string name="granola">Granola</string>
    <string name="smoothie">Smoothie</string>
    <string name="other">Other</string>
    <string name="zero">0</string>
    <string name="zeroDollars">$0.00</string>
    <string name="number">Number</string>
    <string name="pricePerUnit">Price/unit</string>
	<string name ="frozenFruitBag">  Frozen\nFruit Bag</string>
	<string name="title_activity_calculations">Calculations</string>
	<string name="multiply">x   </string>
	<string name="add">   +   </string>
	<string name="minus">   -   </string>
	<string name="equals">   =   </string>
	<string name="numCorrect">Number of Correct Inputs: </string>
	<string name="revenueEquation">Price per item x Quantity = Item Revenue</string>
	<string name="checkRevenueCalc">Check Revenue Calculations</string>
	<string name="goToProfitCalc">Go to Profit Calculations</string>
	<string name="totalRevenue">Total Revenue = </string>
	<string name="title_activity_sales_item_selection">Select Items</string>
	<string name="title_activity_sales_summary">Summary of Sales</string>
	<string name="salesBegin">Begin Sales</string>
	<string name="finishTransaction">Finish Transaction!</string>
	<string name="plusCoupon">+ Coupon</string>
	<string name="minusCoupon">- Coupon</string>
	<string name="plusJunkFood">+ Trade-In</string>
	<string name="minusJunkFood">- Trade-In</string>
	<string-array name="fruit_options">
	    <item>apple</item>
        <item>banana</item>
        <item>orange</item>
        <item>pear</item>
        <item>grapes</item>
        <item>kiwi</item>
        <item>mixedBag</item>
        <item>granola</item>
        <item>smoothie</item>
	</string-array>
	<string name="costEquation">Fruit Stand &#160; &#160;Smoothie&#160;&#160;Additional
	    &#160;&#160;&#160;&#160;&#160;Total\n&#160;&#160;Cost&#160;&#160;&#160;&#160;&#160;&#160;
	    &#160;&#160;+&#160;&#160;&#160;&#160;&#160;&#160;&#160;Cost&#160;&#160;&#160;&#160;&#160;+
	    &#160;&#160;Costs&#160;&#160;&#160;&#160;&#160;=&#160;&#160;&#160;&#160;Costs</string>
	<string name="netProfitEquation">Total Revenue - Total Costs = Net Profit</string>
	<string name="cashBoxEquation">Initial&#160;&#160;&#160;&#160;+&#160;&#160;Donations + Net Profit = Cash Box\nCash Box
	    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
	    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
	    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Total</string>
</resources>
