<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:orientation="vertical"> 

    <TextView 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="Fruit Stand Cost + Smoothie Cost + Additional Costs = Total Costs"
	    android:padding="10dip"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        
       	<TextView android:id="@+id/calc_fruitStandCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/zeroDollars"
            android:singleLine="true"
            android:maxLength="7"
            android:width="70dp"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/add"
            android:textSize="12sp"/>
        
        <TextView
            android:id="@+id/calc_smoothieCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:maxLength="7"
            android:textSize="15sp"
            android:text="@string/zeroDollars"
            android:width="70dp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/add"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/calc_additionalCosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:maxLength="7"
            android:textSize="15sp"
            android:text="@string/zeroDollars"
            android:width="70dp" />
      	
      	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/equals"
            android:textSize="12sp"/>
       		        	
       	<EditText android:id="@+id/calc_totalCost"
            android:cursorVisible="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/zeroDollars"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:maxLength="7"
            android:width="75dp"
            android:textSize="15sp"/>
	</LinearLayout>
	    
    <TextView 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="Total Revenue - Total Costs = Net Profit"
	    android:padding="10dip"
	    android:layout_marginLeft = "20dp"/>
    
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        
       <TextView android:id="@+id/calc_totalRevenueProfitEq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/zeroDollars"
            android:singleLine="true"
            android:maxLength="7"
            android:width="70dp"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"/>
               	 
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/minus"
            android:textSize="12sp"/>
               
       	<TextView android:id="@+id/calc_totalCostProfitEq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/zeroDollars"
            android:singleLine="true"
            android:maxLength="7"
            android:width="70dp"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"/>
       	
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/equals"
            android:textSize="12sp"/>
       		        	
       	<EditText android:id="@+id/calc_profit"
            android:cursorVisible="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/zeroDollars"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:maxLength="7"
            android:width="75dp"
            android:textSize="15sp"/>
    </LinearLayout>
       	
    <TextView 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="Initial Cash Box + Donations + Net Profit = Cash Box Total"
	    android:padding="10dip"/> 
         
 
</LinearLayout>