<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Which whole fruit?"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

         <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
    	    android:layout_marginRight="20dp">
	        
	        <ImageView
	            android:id="@+id/apple_img"
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:src="@drawable/apple"
	            android:contentDescription="@string/apple" />
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:text="@string/apple"
	            android:textSize="15sp"
	            android:textColor="@color/white"/>
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onApplesMinusButtonClick"
            android:text="-" />

        <TextView
            android:id="@+id/SWFPAppleCounter"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onApplesPlusButtonClick"
            android:text="+" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

		<RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginRight="20dp">
	        
	        <ImageView
	            android:id="@+id/orange_img"
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:src="@drawable/orange"
	            android:contentDescription="@string/orange"/>
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:text="@string/orange"
	            android:textSize="15sp"
	            android:textColor="@color/white"/>
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onOrangesMinusButtonClick"
            android:text="-" />

        <TextView
            android:id="@+id/SWFPOrangeCounter"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onOrangesPlusButtonClick"
            android:text="+" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

		<RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginRight="20dp">
	        
	        <ImageView
	            android:id="@+id/banana_img"
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:src="@drawable/banana"
	            android:contentDescription="@string/banana"/>
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:text="@string/banana"
	            android:textSize="15sp"
	            android:textColor="@color/white"/>
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onBananasMinusButtonClick"
            android:text="-" />

        <TextView
            android:id="@+id/SWFPBananaCounter"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onBananasPlusButtonClick"
            android:text="+" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

		<RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginRight="20dp">
	        
	        <ImageView
	            android:id="@+id/kiwi_img"
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:src="@drawable/kiwi"
	            android:contentDescription="@string/kiwi"/>
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:text="@string/kiwi"
	            android:textSize="15sp"
	            android:textColor="@color/white"/>
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onKiwisMinusButtonClick"
            android:text="-" />

        <TextView
            android:id="@+id/SWFPKiwiCounter"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onKiwisPlusButtonClick"
            android:text="+" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginRight="20dp">
	        
	        <ImageView
	            android:id="@+id/pear_img"
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:src="@drawable/pear"
	            android:contentDescription="@string/pear"/>
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:text="@string/pear"
	            android:textSize="15sp"
	            android:textColor="@color/white"/>
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onPearsMinusButtonClick"
            android:text="-" />

        <TextView
            android:id="@+id/SWFPPearCounter"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onPearsPlusButtonClick"
            android:text="+" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

		<RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginRight="20dp">
	        
	        <ImageView
	            android:id="@+id/grapes_img"
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:src="@drawable/grapes"
	            android:contentDescription="@string/grapes"/>
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:text="@string/grapes"
	            android:textSize="15sp"
            	android:textColor="@color/white"/>
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onGrapesMinusButtonClick"
            android:text="-" />

        <TextView
            android:id="@+id/SWFPGrapeCounter"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onGrapesPlusButtonClick"
            android:text="+" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:onClick="onWholeFruitDoneButtonClick"
            android:text="Done" />
    </LinearLayout>

</LinearLayout>